<resources>
    <string name="app_name">Expense_Management</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="menu_in_main_list">List</string>
    <string name="menu_in_main_about">About</string>
    <string name="menu_in_main_register">Register</string>

    <string name="error_empty_list">Empty list.</string>
    <string name="error_not_found">Not Found</string>
    <string name="error_no_info">No Information</string>
    <string name="error_blank_name">Name cannot be blank.</string>
    <string name="error_blank_destination">Destination cannot be blank</string>
    <string name="error_blank_departure_date">Departure Date cannot be blank.</string>
    <string name="error_blank_departure_time">Departure Time cannot be blank</string>
    <string name="error_blank_purpose">Purpose cannot be blank</string>

    <string name="notification_empty_trip_list">There is no trip.</string>
    <string name="notification_empty_expense_list">There is no expense.</string>
    <string name="notification_create_success">Created successfully.</string>
    <string name="notification_create_fail">Not created successfully.</string>
    <string name="notification_delete_success">Deleted successfully.</string>
    <string name="notification_delete_fail">Not deleted successfully.</string>
    <string name="notification_update_success">Updated successfully.</string>
    <string name="notification_update_fail">Not updated successfully.</string>
    <string name="notification_backup_success">Backup successfully.</string>
    <string name="notification_backup_fail">Not backup successfully.</string>
    <string name="notification_reset_database_success">Reset database successfully.</string>
    <string name="notification_delete_confirm">Are you sure to delete this?.</string>

    <string name="label_trip_name">Trip Name</string>
    <string name="label_departure_date">Departure Date</string>
    <string name="label_departure_time">Departure Time</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_type">Type</string>
    <string name="label_add_expense">Add Expense</string>
    <string name="label_register">Register</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_update">Update</string>
    <string name="label_search">Search</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_comment">Comment</string>
    <string name="label_setting">Setting</string>
    <string name="label_confirmation">Confirmation</string>
    <string name="label_reset_database">Reset Database</string>
    <string name="label_backup">Backup</string>
    <string name="label_backup_firestore">Firestore Backup</string>
    <string name="label_risk_assessment">Risk Assessment</string>
    <string name="label_req_risk_assessment">Require</string>
    <string name="label_not_req_risk_assessment">Not Require</string>
    <string name="label_destination">Destination</string>
    <string name="label_description">Description</string>
    <string name="label_amount">Amount</string>
    <string name="label_purpose">Purpose of Trip</string>
    <string name="label_study">Study</string>
    <string name="label_work">Work</string>
    <string name="label_travel">Travel</string>


    <string-array name="expense_type">
        <item>Food</item>
        <item>Hotel Renting</item>
        <item>Transport Service</item>
    </string-array>
</resources>