<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trip.TripRegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/fmTripRegisterLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/fmTripRegisterError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="11sp"
                app:lineHeight="20dp" />

            <EditText
                android:id="@+id/fmTripRegisterTripName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_trip_name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorLink="@color/blue"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmTripRegisterDestination"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/label_destination"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <LinearLayout
                android:id="@+id/fmTripRegisterDepartureDateLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/fmTripRegisterDepartureDate"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/label_departure_date"
                    android:inputType="date"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/fmTripRegisterConfirmDepartureTime"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginStart="31dp"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/label_time"
                    android:inputType="time"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fmTripRegisterPurposeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fmTripRegisterPurpose"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center|left"
                    android:text="@string/label_purpose"
                    android:padding="3.5dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/fmTripRegisterRadioGroupPurpose"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/fmTripRegisterRadioButtonStudy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_study"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/fmTripRegisterRadioButtonWork"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_work"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/fmTripRegisterRadioButtonTravel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/label_travel"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </RadioGroup>

            </LinearLayout>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/fmTripRegisterRiskAssessment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingLeft="5dp"
                android:paddingTop="15dp"
                android:paddingEnd="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="20dp"
                android:text="@string/label_risk_assessment"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/fmTripRegisterDescription"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:ems="10"
                android:hint="@string/label_description"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <Button
                android:id="@+id/fmTripRegisterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_register"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>